# 2024_RM_Vision

./: .Init.cfg  .gitignore  .package.cfg  All_install.sh  CMakeLists.txt  Init.sh  README.md  Readme.md  Sentinel_L.txt  Sentinel_R.txt  c_1_black.txt  c_2_white.txt  install.sh  main.cpp  package.sh  set_env.sh
Package/AngleSolve/: .README.md  .setup.sh  AngleSolve_test.cpp  CMakeLists.txt
Package/AngleSolve/include/: AngleSolve.h
Package/AngleSolve/src/: AngleSolve.cpp
Package/Armor_Detection/: .README.md  .setup.sh  Armor_Detection_test.cpp  CMakeLists.txt
Package/Armor_Detection/include/: Armor_detection.h  Number_DNN.h
Package/Armor_Detection/src/: Armor_detection.cpp  Number_DNN.cpp
Package/Armor_Track/: .setup.sh  Armor_Track_test.cpp  CMakeLists.txt
Package/Armor_Track/include/: Armor_Track.h  Kalman.h  SpinTracker.h
Package/Armor_Track/src/: Armor_Track.cpp
Package/HIK_Camera/: .README.md  .setup.sh  .setup.sh.swp  CMakeLists.txt  HIK_SDK_test.cpp
Package/HIK_Camera/include/: HIK_Camera.h
Package/HIK_Camera/include/HIK_Camera_H/: CameraParams.h  MvCameraControl.h
Package/HIK_Camera/src/: HIK_Camera.cpp
Package/MD_Camera/: .README.md  .setup.sh  CMakeLists.txt  MD_Camera_test.cpp
Package/MD_Camera/include/: MD_Camera.h
Package/MD_Camera/include/MD_Camera_H/: CameraDefine.h
Package/MD_Camera/src/: MD_Camera.cpp
Package/Serial_Device/: .setup.sh  CMakeLists.txt  Serial_Device_test.cpp
Package/Serial_Device/include/: serial_device.h  serial_main.h
Package/Serial_Device/src/: serial_device.cpp  serial_main.cpp
RM_Detection/: README.md  (+1 more)
RM_Detection/Package/AngleSolve/: CMakeLists.txt
RM_Detection/Package/AngleSolve/include/: AngleSolve.h
RM_Detection/Package/AngleSolve/src/: AngleSolve.cpp
RM_Detection/Package/Armor_Detection/: CMakeLists.txt  setup.sh
RM_Detection/Package/Armor_Detection/include/: Armor_detection.h
RM_Detection/Package/Armor_Detection/src/: Armor_detection.cpp
RM_Detection/Package/Armor_Observe/: Armor_Observe_test.cpp  CMakeLists.txt
RM_Detection/Package/Armor_Observe/include/: Armor_Observe.h  Circle_Kalman.h
RM_Detection/Package/Armor_Observe/src/: Armor_Observe.cpp
RM_Detection/Package/HIK_Camera/: CMakeLists.txt  HIK_SDK_test.cpp
RM_Detection/Package/HIK_Camera/include/: HIK_Camera.h
RM_Detection/Package/HIK_Camera/src/: HIK_Camera.cpp
RM_Detection/Package/MD_Camera/: CMakeLists.txt  MD_Camera_test.cpp
RM_Detection/Package/MD_Camera/MD_Camera/: camera.cpp  test_test.cpp
RM_Detection/Package/MD_Camera/MD_Camera/camera/: CameraApi.h  CameraDefine.h  camera.h
RM_Detection/Package/MD_Camera/include/: MD_Camera.h
RM_Detection/Package/MD_Camera/include/MD_Camera_H/: CameraApi.h  CameraDefine.h
RM_Detection/Package/MD_Camera/src/: MD_Camera.cpp
RM_Detection/Package/Thread/: CMakeLists.txt  Thread_test.cpp
RM_Detection/Package/Thread/include/: Thread.h
RM_Detection/Package/Thread/src/: Thread.cpp
src/communication/: CMakeLists.txt
src/communication/Kalman/: Kalman.cpp  Kalman.h
src/communication/src/: PTZ_Yaw_Receive.cpp  PTZ_perception_L.cpp  PTZ_perception_R.cpp
src/communication/test/: PTZ_test.cpp
src/hik_camera/: CMakeLists.txt  HIK_Camera_L_node.cpp  HIK_Camera_R_node.cpp  HIK_Camera_node.cpp  Receive_L_test.cpp  Receive_R_test.cpp  Receive_test.cpp
src/hik_camera/include/: HIK_Camera.h
src/hik_camera/launch/: HIKCamera_L_test.launch  HIKCamera_R_test.launch
src/hik_camera/src/: HIK_Camera.cpp
src/omni_perception/: CMakeLists.txt  Omnidirectional_decision.cpp  USB_Camera_Param.yaml
src/omni_perception/package/AngleSolve/include/: AngleSolve.h
src/omni_perception/package/AngleSolve/src/: AngleSolve.cpp
src/omni_perception/package/Armor_Track/include/: Armor_Track.h
src/omni_perception/package/Armor_Track/src/: Armor_Track.cpp
src/omni_perception/src/: camera_F_node.cpp  camera_L_node.cpp  camera_O_node.cpp  camera_R_node.cpp
src/omni_perception/udev/: setup.sh  usb_camera.rules
src/robot_detection/: Buff_Dubug.cpp  CMakeLists.txt  Readme.md  Robot_Detection.cpp  Robot_Detection_L.cpp  Robot_Detection_R.cpp  package.xml
src/robot_detection/SetParam_File/: Buff_data.yaml  Detect_data.yaml  Dnn_data.yaml  HIKCamera_Param.yaml  Neural_Detect_data.yaml  Observe_data.yaml  Solve_data.yaml  Track_data.yaml
src/robot_detection/launch/: Buff_Dubug.launch  RM_Detection.launch  RM_Detection_L.launch  RM_Detection_R.launch
src/robot_detection/src/AngleSolve/include/: AngleSolve.h
src/robot_detection/src/AngleSolve/src/: AngleSolve.cpp
src/robot_detection/src/Armor_Detection/include/: Armor_detection.h  Number_DNN.h
src/robot_detection/src/Armor_Detection/src/: Armor_detection.cpp  Number_DNN.cpp
src/robot_detection/src/Armor_Observe/include/: Armor_Observe.h  Circle_Kalman.h
src/robot_detection/src/Armor_Observe/src/: Armor_Observe.cpp  Circle_Kalman.cpp
src/robot_detection/src/Armor_Track/include/: Armor_Track.h  Kalman.h  Order_Kalman.h
src/robot_detection/src/Armor_Track/src/: Armor_Track.cpp  Kalman.cpp  Order_Kalman.cpp  SpinTracker.cpp
src/robot_detection/src/Buff_Detection/: Readme.md
src/robot_detection/src/Buff_Detection/buff_logs/: 2024-04-26_20-56-33.txt
src/robot_detection/src/Buff_Detection/include/: BuffDetection.h  Logger.h
src/robot_detection/src/Neural_Armor_Detection/: Neural_Armor_Detection_test.cpp
src/robot_detection/src/Neural_Buff_Detection/: Neural_Armor_Detection_test.cpp
src/robot_detection/src/Outpost_Observe/: Readme.md
src/robot_msgs/: CMakeLists.txt
src/robot_msgs/msg/: PTZ_Yaw.msg  PTZ_perception.msg  Track_reset.msg  Vision.msg  Yaw_Decision.msg  omni_perception.msg  robot_ctrl.msg  usb_camera.msg  vision.msg
src/serial_device/: CMakeLists.txt  Reveice_test.cpp  Send_test.cpp  Serial_Device_Receive_node.cpp  Serial_Device_Send_L_node.cpp  Serial_Device_Send_R_node.cpp  Serial_Device_Send_node.cpp
src/serial_device/include/: serial_main.h
src/serial_device/launch/: SerialDevice_L_test.launch  SerialDevice_R_test.launch
src/serial_device/udev/: Sentinel_usb.rules  rule_setup.sh  setup.sh
(+181 files in other folders)
